# resume-parser-blue-iq-dev

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLEANUP_PLAN.md  Dockerfile  Dockerfile.lambda  Makefile  PROJECT.md  Professions, Specialities - 2.11.26 updates.xlsx  README.md  docker-compose.yml  pyproject.toml  resume_parser_backend_architecture_proposal.md
.github/workflows/: deploy.yml  pr-check.yml  rollback.yml
app/: main.py
app/api/: dependencies.py
app/core/: config.py  errors.py  exceptions.py  file_validator.py  logging.py  rate_limit.py  rate_limiter.py  security.py  url_validator.py
app/data/: facility_catalog.json  geography_catalog.json  specialty_catalog.json
app/db/: _client.py  api_keys.py  audit_logs.py  batches.py  companies.py  dynamodb.py  feedback.py  instructions.py  jobs.py  webhooks.py
app/handlers/: lambda_handler.py  worker_lambda.py
app/models/: schemas.py
app/services/: budget.py  feedback.py  pipeline.py
app/storage/: s3_client.py
app/workers/: background.py  batch_processor.py  dispatch.py  webhook_sender.py
benchmark/: README.md  __init__.py  run.py  scorer.py
docs/: ARCHITECTURE.md  Blue-IQ_Resume_Parser_Knowledge_Book.docx  CLEANUP_PLAN.md  CLIENT_INTEGRATION_GUIDE.md  DEPLOYMENT.md  PROJECT.md  README.md  custom-api-domain.md  ocean-blue-integration-flow.md  ocean-blue-webhook-timing-note.md
infrastructure/terraform/: cloudfront_api.tf  dynamodb.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  sqs.tf  ssm.tf  terraform.tfvars.example  variables.tf  variables_extra.tf
scripts/: localstack_init.sh  provision_worker.sh  refresh_facility_catalog.py  refresh_geography_catalog.py  refresh_specialty_catalog.py  set_lambda_secret.sh
tests/: conftest.py
tests/integration/: test_auth.py  test_batch.py  test_feedback.py  test_health.py  test_parse_gateway_budget.py  test_security.py  test_upload.py
tests/unit/: test_admin_companies.py  test_admin_refinement.py  test_admin_stats.py  test_audit_fixes.py  test_benchmark_scorer.py  test_budget.py  test_city_api.py  test_city_resolver.py  test_classifier.py  test_confidence_scorer.py  test_credential_recovery.py  test_dynamo_serialization.py  test_facility_api.py  test_facility_catalog.py  test_facility_matcher.py  test_feedback_diff.py  test_geography_api.py  test_geography_catalog.py  test_geography_matcher.py  test_gig_api.py  test_healthcare_normalizer.py  test_heuristic_parser.py  test_llm_client.py  test_llm_resilience.py  test_normalizer.py  test_ocr_force_textract.py  test_ocr_images.py  test_orchestrator.py  test_parsed_resume_schema.py  test_pdf_extractor.py  test_perf_instrumentation.py  test_pipeline_degradation.py  test_refinement_aggregator.py  test_refinement_field_map.py  test_refinement_store.py  test_rtf_extractor.py  test_rule_parser.py  test_section_detector.py  (+6 more)
(+66 files in other folders)
