[tool.poetry]
name = "resume-parser"
version = "1.0.0"
description = "Enterprise Resume Parsing API"
authors = ["BlueIQ <oceanbluesolutions@gmail.com>"]
readme = "README.md"
# The distribution name ("resume-parser") does not match the import package
# ("app"), so Poetry cannot infer it. Without this, `poetry install` fails on
# the root project under Poetry 2.x — CI only survives because it pins 1.8.4.
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
boto3 = "^1.35.0"
botocore = "^1.35.0"
python-multipart = "^0.0.12"
PyMuPDF = "^1.24.0"
python-docx = "^1.1.0"
striprtf = ">=0.0.26,<0.1.0"
pytesseract = "^0.3.13"
Pillow = "^11.0.0"
openai = "^1.55.0"
httpx = "^0.28.0"
structlog = "^24.4.0"
python-ulid = "^3.0.0"
pdf2image = "^1.17.0"
mangum = "^0.19.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.35.0"
pytest-cov = "^6.0.0"
moto = { extras = ["dynamodb", "s3"], version = "^5.0.0" }
ruff = "^0.8.0"
mypy = "^1.13.0"
boto3-stubs = { extras = ["dynamodb", "s3", "textract"], version = "^1.35.0" }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",   # line too long — long prompt strings and Field descriptions are intentional
    "UP042",  # StrEnum from typing — we use enum.StrEnum which IS the preferred Py3.11+ form
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]   # tests sometimes need module-level setup before imports

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Practical settings for FastAPI/Pydantic — strict=true produces 100+ false positives
# on Field(default=None), Depends(), and untyped boto3 returns. We enable the checks
# that catch real bugs and skip the bureaucratic ones.
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# Don't fight Pydantic's Field() defaults or boto3's Any returns
disable_error_code = [
    "type-arg",       # missing generic args — dict vs dict[str, Any] is noise
    "no-untyped-def", # FastAPI route handlers don't need full annotations
    "no-untyped-call",
    "no-any-return",  # boto3 returns Any everywhere
    "call-arg",       # Pydantic Field(None, ...) confuses mypy
    "arg-type",       # DynamoDB returns Decimal that ints accept
    "assignment",     # Dict[Any,Any] | None vs Dict
    "misc",
    "attr-defined",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
